<resources>
    <string name="app_name">assignment1</string>
    <string name="enter_course_name">enter course name</string>
    <string name="new_assignment">new assignment</string>
    <string name="assignments">Assignments</string>
    <string name="enter_assignment_title">assignment title</string>
    <string name="enter_your_question">question</string>
    <string name="submit">submit</string>
    <string name="enter_your_response">enter your response</string>
    <string name="upload_answer">upload answer</string>
    <string name="create_class">create class</string>
    <string name="join_class">join class</string>
    <string name="course">course:</string>
    <string name="professor_colon">professor:</string>
    <string name="title_colon">title:</string>
    <string name="question_colon">question:</string>
    <string name="grade_colon">grade:</string>
    <string name="label">label</string>
    <string name="course_name">course name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="answer_field">please type your answer here</string>
    <string name="answer">answer</string>
    <string name="grade_hint">grade</string>
    <string name="join">join</string>
    <string name="student_registration">Student Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="student_id">Student ID</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="student_login">Student Login</string>
    <string name="no_account_register">Don\'t have an account? Register</string>
    <string name="professor_registration">Professor Registration</string>
    <string name="university">University</string>
    <string name="professor_login">Professor Login</string>
    <string name="assignment_name">assignment name</string>
    <string name="answers">answers</string>
    <string name="question">question</string>
    <string name="new_course">new course</string>
    <string name="course_app">Course App</string>
    <string name="continue_as_student">Continue as Student</string>
    <string name="continue_as_professor">Continue as Professor</string>
</resources>